fixed the error in controller/user.js showUser function, ammended user schema destinations and wrap object into aan array

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,6 +151,10 @@ span{
 	}
 }
 
+#login-li, #signOut-li{
+	background-color: #093c8e;
+}
+
 /*********************Explore*************************/
 #searchTrip{
 	border:5px solid #666666;
